# PVAnalyzer

./: .gitignore  CMakeLists.txt  README.md  athlete_finder.hpp  background_tracker.hpp  body_detector.hpp  center of gravity.xlsx  clean.sh  cogs_analyzer_updated_coords.csv  description.txt  drawer.hpp  forward.cpp  forward.hpp  install.sh  install_opencv.sh  main.cpp  model.hpp  models.sh  movement_analyzer.hpp  no_last_box.avi  parameters.hpp  parts_detector.hpp  person.hpp  person_checker.hpp  plot_parameters.py  plot_params.py  run.sh  scaling-1.avi  test.cpp  test.py  tracked_rotation.avi  vault_analyzer.hpp  vault_body_detector.hpp  vertical_movement_analyzer.hpp  video_processor.hpp  viewer.hpp  visual.hpp
data/: rect_height.csv
docs/: BP - struktura.docx  Doxyfile  plan.txt  scheme.drawio  vault_parameters.txt  videos.txt
models/: 2021-04-18_16-46-12.txt  2021-04-18_22-54-02.txt  2021-04-25_21-53-12.txt
outputs/: 2021-03-31_19-13-31.csv  2021-03-31_19-22-40.csv  2021-03-31_20-19-02.csv  2021-03-31_20-20-58.csv  2021-04-04_22-09-11.csv  2021-04-06_22-50-10.csv  2021-04-06_23-14-10.csv  Centers_of_gravity.numbers  cogs.csv  cogs_analyzer_updated.csv  cogs_analyzer_updated_coords_2.csv  rect_height.csv
parameters/: 2021-04-09_14-20-23.csv  2021-04-09_14-23-02.csv  2021-04-09_14-26-26.csv  2021-04-10_12-33-24.csv  2021-04-11_22-20-53.csv  2021-04-12_09-25-15.csv  2021-04-15_18-57-42.csv  2021-04-16_21-31-52.csv  2021-04-17_16-36-53.csv  2021-04-17_16-46-50.csv  2021-04-17_18-04-50.csv  2021-04-18_22-52-21.csv  2021-04-18_22-54-02.csv  2021-04-25_22-13-50.csv
(+306 files in other folders)
